--- a/manifest/index.html
+++ b/manifest/index.html
@@ -35,11 +35,11 @@
       </h1>
     </header>
     <nav class="menu">
-      <a href="/">Главная</a>
+      <a href="../">Главная</a>
       <a href="../about">О кандидате</a>
       <a href="#">Манифест</a>
       <a href="../program">Программа</a>
-      <a href="#join">Присоединяйтесь</a>
+      <a href="../results">Результаты</a>
     </nav>
 
     <section>
