--- a/program/index.html
+++ b/program/index.html
@@ -31,11 +31,11 @@
         <img src="../images/main.jpeg" class="main-photo" />
       </h1>
         <nav class="menu">
-            <a href="#">Главная</a>
-            <a href="./about">О кандидате</a>
-            <a href="./manifest">Манифест</a>
-            <a href="./program/">Программа</a>
-            <a href="./results/">Результаты</a>
+            <a href="../">Главная</a>
+            <a href="../about">О кандидате</a>
+            <a href="../manifest">Манифест</a>
+            <a href="#">Программа</a>
+            <a href="../results/">Результаты</a>
             <!-- <a href="#join">Поддержать</a> -->
         </nav>
     </header>
@@ -163,43 +163,41 @@
         </p>
         <table></table>
         <h4>Анализ текущего состояния городского управления</h4>
-        <p>Конечно, вам уже бросился в глаза колоссальный разрыв между идеальным Санкт-Петербургом, который мы все хотим видеть, описанным в Разделе 1, – и реальным положением дел, показанным в Разделе 2: огромное число петербуржцев живёт в ужасающих, неприемлемых или просто трудных условиях. Наверное, по пальцам можно пересчитать тех горожан, у которых не было бы никаких коммунальных или социальных неприятностей.
-            А ведь большинство пунктов, которые мы включили в Раздел «Видение будущего», взяты из Стратегий 2030 и 2035 – разработанных под эгидой городского руководства и им же официально принятых в исполнение.
-            </p>
-            <p>Как же так получается, что власть планирует одно – а в реальности вырастает совсем другое?
-                Проблема, как нам кажется, в нескольких ключевых недостатках организации городского управления.
-                </p>
-                <ol>
-                  <li>Власть непрозрачна. Жители, эксперты, бизнес – не понимают, как, кем и когда принимаются те или иные решения. А когда решения принимаются, их уже почти невозможно изменить.
-                    </li>
-                    <li>Власть не слышит людей, не понимает, как общаться с бизнесом. Структура городского устройства такова, что у чиновников нет ни времени, ни необходимости, ни желания толком выслушивать жалобы жителей или разбираться в проблемах предпринимателей.
-                      </li>
-                      <li> Даже если какой-то чиновник войдёт в ситуацию обратившегося к нему человека, как правило, он не обладает необходимыми полномочиями, чтобы ему помочь. Для решения любой, самой маленькой проблемы нужно обращаться наверх, потом снова наверх, ещё выше – вплоть до уровня губернатора. А у губернатора времени на всех уже не хватает. Такая практика ручного управления пятимиллионным городом абсолютно порочна.</li>
-                      <li>Напротив, муниципальные депутаты и назначенные ими муниципальные администрации – то есть структуры, непосредственно избранные жителями, – не имеют почти никакой возможности реально влиять на ситуацию в своих округах. Кто-то может возразить, что у населения недостаточно интереса к муниципальным выборам, и депутаты на самом деле жителей не представляют – но это лишь обратная сторона той же медали. Если муниципалы будут иметь больше влияния на жизнь своих округов, то и интерес к их работе вырастет, а значит, и жители будут более активно участвовать в голосовании.
-                        </li>
-                       
-                    </ol>
-                    <p>Почему так получается? Потому что действующая система городского управления не отвечает требованиям времени. Она сложилась ещё во времена СССР, в  рамках жёсткой административно-командной парадигмы.
-                        Начиная со времён Перестройки структура городской власти непрерывно реформировалась, но эти реформы не касались её сущностного устройства.
-                        Когда перед властью возникал новый вызов – она по привычке создавала новый комитет. Который, который, однако же, имел мало влияния на реальное положение дел, потому что представлял собой некий «костыль», слабо интегрированный в жёсткий вертикально ориентированный костяк городского управления.
-                        </p>
-                        <p>Например, когда во власти созрело понимание того, что городу необходимо улучшать туристическую привлекательность, был создан Комитет по туризму. Однако этот комитет может решить лишь ограниченное число точечных проблем, но не в силах повлиять на общую ситуацию с туризмом, ведь она складывается из суммы работы многих других органов власти: в частности, развития транспортной (в том числе морской) и гостиничной инфраструктуры, пешеходных зон. В результате Комитет по туризму вынужден ограничиваться паллиативными мерами и почти не оказывает влияния на рост туризма.
-                            Комитет по делам Арктики был создан, потому что необходимо было показать активность в развитии арктического региона. Но чем Комитет реально занимается? Разработкой собственного положения, проведением конференций и конкурсов?
-                            </p>
-                            <p>Официально Комитет по делам Арктики «проводит государственную политику в сфере развития научно-исследовательских, культурных, социально-экономических, экологических и других связей Санкт-Петербурга с регионами Арктической зоны Российской Федерации, а также координирует деятельность иных исполнительных органов государственной власти Санкт-Петербурга в этой сфере» (https://www.gov.spb.ru/gov/otrasl/arkt/). Ключевые слова: развитие связей. Однако «международным и межрегиональным сотрудничеством» уже занимается Комитет по внешним связям (КВС)! Неужели у Петербурга столь много связей с Арктикой, что они по объёму сравнимы с контактами, которые осуществляет один лишь КВС: с Финляндией, Прибалтикой, Калининградом, Белоруссией, Москвой, Псковом, Новгородом, и вообще всем миром в целом?</p>
-   <p>Однажды созданные комитеты постоянно переформируются: то сливаются, то разъединяются. Управление этими комитетами перекидывается, словно детские кубики, от одного вице-губернатора другому, из кубиков выстраиваются конструкции - новые при этом не более эффективны, чем старые.
-      Возникают совсем уж курьёзные ситуации, как, например, в нынешнем Правительстве Санкт-Петербурга: вице-губернатор Владимир Княгинин отвечает за один-единственный Комитет по науке и высшей школе. Это при том, что большое число научных учреждений и вузов Петербурга имеют федеральное подчинение и к городу вообще не относятся. Так зачем назначать на это направление отдельного вице-губернатора? Возможно, только для того, чтобы ввести дополнительного человека в правительство?
-      </p>
-      <p>Комитет территориального развития, в противоречие собственному названию, занимается вовсе не развитием территорий, а взаимодействием с муниципалами, политическими партиями и избирательными комиссиями (https://www.gov.spb.ru/gov/otrasl/ktr/). Некоторые эксперты полагают, что комитет создан для использования административного ресурса во время выборов.
+        <p>Конечно, вам уже бросился в глаза колоссальный разрыв между идеальным Санкт-Петербургом, который мы все хотим видеть, описанным в Разделе 1, – и реальным положением дел, показанным в Разделе 2: огромное число петербуржцев живёт в ужасающих, неприемлемых или просто трудных условиях. Наверное, по пальцам можно пересчитать тех горожан, у которых не было бы никаких коммунальных или социальных неприятностей. А ведь большинство пунктов, которые мы включили в Раздел «Видение будущего», взяты из Стратегий 2030 и 2035 – разработанных под эгидой городского руководства и им же официально принятых в исполнение.
+        </p>
+        <p>Как же так получается, что власть планирует одно – а в реальности вырастает совсем другое? Проблема, как нам кажется, в нескольких ключевых недостатках организации городского управления.
+        </p>
+        <ol>
+            <li>Власть непрозрачна. Жители, эксперты, бизнес – не понимают, как, кем и когда принимаются те или иные решения. А когда решения принимаются, их уже почти невозможно изменить.
+            </li>
+            <li>Власть не слышит людей, не понимает, как общаться с бизнесом. Структура городского устройства такова, что у чиновников нет ни времени, ни необходимости, ни желания толком выслушивать жалобы жителей или разбираться в проблемах предпринимателей.
+            </li>
+            <li> Даже если какой-то чиновник войдёт в ситуацию обратившегося к нему человека, как правило, он не обладает необходимыми полномочиями, чтобы ему помочь. Для решения любой, самой маленькой проблемы нужно обращаться наверх, потом снова наверх, ещё выше – вплоть до уровня губернатора. А у губернатора времени на всех уже не хватает. Такая практика ручного управления пятимиллионным городом абсолютно порочна.</li>
+            <li>Напротив, муниципальные депутаты и назначенные ими муниципальные администрации – то есть структуры, непосредственно избранные жителями, – не имеют почти никакой возможности реально влиять на ситуацию в своих округах. Кто-то может возразить, что у населения недостаточно интереса к муниципальным выборам, и депутаты на самом деле жителей не представляют – но это лишь обратная сторона той же медали. Если муниципалы будут иметь больше влияния на жизнь своих округов, то и интерес к их работе вырастет, а значит, и жители будут более активно участвовать в голосовании.
+            </li>
+
+        </ol>
+        <p>Почему так получается? Потому что действующая система городского управления не отвечает требованиям времени. Она сложилась ещё во времена СССР, в рамках жёсткой административно-командной парадигмы. Начиная со времён Перестройки структура городской власти непрерывно реформировалась, но эти реформы не касались её сущностного устройства. Когда перед властью возникал новый вызов – она по привычке создавала новый комитет. Который, который, однако же, имел мало влияния на реальное положение дел, потому что представлял собой некий «костыль», слабо интегрированный в жёсткий вертикально ориентированный костяк городского управления.
+        </p>
+        <p>Например, когда во власти созрело понимание того, что городу необходимо улучшать туристическую привлекательность, был создан Комитет по туризму. Однако этот комитет может решить лишь ограниченное число точечных проблем, но не в силах повлиять на общую ситуацию с туризмом, ведь она складывается из суммы работы многих других органов власти: в частности, развития транспортной (в том числе морской) и гостиничной инфраструктуры, пешеходных зон. В результате Комитет по туризму вынужден ограничиваться паллиативными мерами и почти не оказывает влияния на рост туризма. Комитет по делам Арктики был создан, потому что необходимо было показать активность в развитии арктического региона. Но чем Комитет реально занимается? Разработкой собственного положения, проведением конференций и конкурсов?
+        </p>
+        <p>Официально Комитет по делам Арктики «проводит государственную политику в сфере развития научно-исследовательских, культурных, социально-экономических, экологических и других связей Санкт-Петербурга с регионами Арктической зоны Российской Федерации, а также координирует деятельность иных исполнительных органов государственной власти Санкт-Петербурга в этой сфере» (https://www.gov.spb.ru/gov/otrasl/arkt/). Ключевые слова: развитие связей. Однако «международным и межрегиональным сотрудничеством» уже занимается Комитет по внешним связям (КВС)! Неужели у Петербурга столь много связей с Арктикой, что они по объёму сравнимы с контактами, которые осуществляет один лишь КВС: с Финляндией, Прибалтикой, Калининградом, Белоруссией, Москвой, Псковом, Новгородом, и вообще всем миром в целом?</p>
+        <p>Однажды созданные комитеты постоянно переформируются: то сливаются, то разъединяются. Управление этими комитетами перекидывается, словно детские кубики, от одного вице-губернатора другому, из кубиков выстраиваются конструкции - новые при этом не более эффективны, чем старые. Возникают совсем уж курьёзные ситуации, как, например, в нынешнем Правительстве Санкт-Петербурга: вице-губернатор Владимир Княгинин отвечает за один-единственный Комитет по науке и высшей школе. Это при том, что большое число научных учреждений и вузов Петербурга имеют федеральное подчинение и к городу вообще не относятся. Так зачем назначать на это направление отдельного вице-губернатора? Возможно, только для того, чтобы ввести дополнительного человека в правительство?
+        </p>
+        <p>Комитет территориального развития, в противоречие собственному названию, занимается вовсе не развитием территорий, а взаимодействием с муниципалами, политическими партиями и избирательными комиссиями (https://www.gov.spb.ru/gov/otrasl/ktr/). Некоторые эксперты полагают, что комитет создан для использования административного ресурса во время выборов.
         </p>
         <p>Системе городской власти необходим жёсткий аудит. На данном этапе провести его невозможно в связи с закрытостью системы. Однако, заняв губернаторский пост, Красимир Врански получит возможность проанализировать работу системы и представить результаты на суд общественности.</p>
-                         <p>Следуя принципу «не ломать, а строить», мы будем бережно подходить к реформам и внедрять изменения только там, где они действительно нужны. Если окажется, что какие-то структуры работают удовлетворительно – лучше их вообще не трогать; по крайней мере, до тех пор, пока есть что улучшать в других структурах, которые никуда не годятся.
-                          </p><h4>Предложения по реформированию городского управления
-                            </h4><p>Чтобы исправить ситуацию с городским управлением, мы предлагаем провести двухступенчатую схему реформ. Она позволит вводить изменения постепенно, продумывая и прорабатывая каждый следующий шаг, обсуждая уже проведённые изменения с горожанами и экспертами.
-                                Главное достоинство этой схемы – её возможность изменяться в процессе, приноравливаясь к новым вызовам. Изменять и улучшать её мы начнём прямо сейчас, после первой публикации настоящей Программы. Мы будем рассматривать все предложения по изменению и улучшению Программы в целом и её частей от жителей Санкт-Петербурга, экспертного сообщества, бизнесменов и, конечно же, самих чиновников. А затем - интегрировать ваши советы в состав Программы.
-                                </p><h5>Первая стадия реформирования городского управления: антикризисная
-                                  </h5><p>Первая стадия реформы городского управления состоит из трёх элементов:
-                                    </p> </section>
+        <p>Следуя принципу «не ломать, а строить», мы будем бережно подходить к реформам и внедрять изменения только там, где они действительно нужны. Если окажется, что какие-то структуры работают удовлетворительно – лучше их вообще не трогать; по крайней мере, до тех пор, пока есть что улучшать в других структурах, которые никуда не годятся.
+        </p>
+        <h4>Предложения по реформированию городского управления
+                            </h4>
+        <p>Чтобы исправить ситуацию с городским управлением, мы предлагаем провести двухступенчатую схему реформ. Она позволит вводить изменения постепенно, продумывая и прорабатывая каждый следующий шаг, обсуждая уже проведённые изменения с горожанами и экспертами. Главное достоинство этой схемы – её возможность изменяться в процессе, приноравливаясь к новым вызовам. Изменять и улучшать её мы начнём прямо сейчас, после первой публикации настоящей Программы. Мы будем рассматривать все предложения по изменению и улучшению Программы в целом и её частей от жителей Санкт-Петербурга, экспертного сообщества, бизнесменов и, конечно же, самих чиновников. А затем - интегрировать ваши советы в состав Программы.
+        </p>
+        <h5>Первая стадия реформирования городского управления: антикризисная
+                                  </h5>
+        <p>Первая стадия реформы городского управления состоит из трёх элементов:
+        </p>
+    </section>
 
     <footer>
         <h3>Присоединяйтесь к команде Красимира Врански!</h3>
