--- a/about/index.html
+++ b/about/index.html
@@ -32,11 +32,11 @@
         <img src="../images/main.jpeg" class="main-photo" />
       </h1>
       <nav class="menu">
-        <a href="#">Главная</a>
-        <a href="./about">О кандидате</a>
-        <a href="./manifest">Манифест</a>
-        <a href="./program/">Программа</a>
-        <a href="./results/">Результаты</a>
+        <a href="../">Главная</a>
+        <a href="#">О кандидате</a>
+        <a href="../manifest">Манифест</a>
+        <a href="../program/">Программа</a>
+        <a href="../results/">Результаты</a>
         <!-- <a href="#join">Поддержать</a> -->
       </nav>
     </header>
