--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
       <nav class="menu">
         <a href="../">Главная</a>
         <a href="#">О кандидате</a>
-        <a href="../manifest">Манифест</a>
+        <a href="../manifest/">Манифест</a>
         <a href="../program/">Программа</a>
         <a href="../results/">Результаты</a>
         <!-- <a href="#join">Поддержать</a> -->
