--- a/program/index.html
+++ b/program/index.html
@@ -32,8 +32,8 @@
       </h1>
         <nav class="menu">
             <a href="../">Главная</a>
-            <a href="../about">О кандидате</a>
-            <a href="../manifest">Манифест</a>
+            <a href="../about/">О кандидате</a>
+            <a href="../manifest/">Манифест</a>
             <a href="#">Программа</a>
             <a href="../results/">Результаты</a>
             <!-- <a href="#join">Поддержать</a> -->
