--- a/manifest/index.html
+++ b/manifest/index.html
@@ -36,10 +36,10 @@
     </header>
     <nav class="menu">
       <a href="../">Главная</a>
-      <a href="../about">О кандидате</a>
+      <a href="../about/">О кандидате</a>
       <a href="#">Манифест</a>
-      <a href="../program">Программа</a>
-      <a href="../results">Результаты</a>
+      <a href="../program/">Программа</a>
+      <a href="../results/">Результаты</a>
     </nav>
 
     <section>
