--- a/results/index.html
+++ b/results/index.html
@@ -36,9 +36,9 @@
     </header>
     <nav class="menu">
       <a href="../">Главная</a>
-      <a href="../about">О кандидате</a>
-      <a href="../manifest">Манифест</a>
-      <a href="../program">Программа</a>
+      <a href="../about/">О кандидате</a>
+      <a href="../manifest/">Манифест</a>
+      <a href="../program/">Программа</a>
       <a href="#">Результаты</a>
     </nav>
 
