Update manifest header

--- a/manifest/index.html
+++ b/manifest/index.html
@@ -27,20 +27,19 @@
   <body>
     <header>
       <h1>
-        <span class="top"
-          >Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr></span
-        >
-        <img class="logo" src="../icons/logo.svg" alt="Эмблема" />
-        <span class="bottom">Красимир Врански</span>
+        Кандидат в Губернаторы <nobr>Санкт-Петербурга</nobr>
+        <nobr>Красимир Врански</nobr>
+        <img src="../images/main.jpeg" class="main-photo" />
       </h1>
+      <nav class="menu">
+        <a href="../">Главная</a>
+        <a href="../about/">О кандидате</a>
+        <a href="../manifest/">Манифест</a>
+        <a href="#">Программа</a>
+        <a href="../results/">Результаты</a>
+        <!-- <a href="#join">Поддержать</a> -->
+      </nav>
     </header>
-    <nav class="menu">
-      <a href="../">Главная</a>
-      <a href="../about/">О кандидате</a>
-      <a href="#">Манифест</a>
-      <a href="../program/">Программа</a>
-      <a href="../results/">Результаты</a>
-    </nav>
 
     <section>
       <h2>Манифест</h2>
