--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="./about/">О кандидате</a>
           <a href="./manifest/">Манифест</a>
           <a href="./program/">Программа</a>
-          <a href="./results/">Результаты</a>
+          <!-- <a href="./results/">Результаты</a> -->
           <!-- <a href="#join">Поддержать</a> -->
         </nav>
     </header>
