--- a/program/index.html
+++ b/program/index.html
@@ -35,7 +35,7 @@
             <a href="../about/">О кандидате</a>
             <a href="../manifest/">Манифест</a>
             <a href="#">Программа</a>
-            <a href="../results/">Результаты</a>
+            <!-- <a href="../results/">Результаты</a> -->
             <!-- <a href="#join">Поддержать</a> -->
         </nav>
     </header>
@@ -196,6 +196,45 @@
         <h5>Первая стадия реформирования городского управления: антикризисная
                                   </h5>
         <p>Первая стадия реформы городского управления состоит из трёх элементов:
+            <ol>
+                <li><strong>Укрупнение муниципальных округов и передача им функций административных районов, которые сейчас входят в систему исполнительных органов государственной власти.</strong> Возможны два варианта выстраивания такой системы:
+                    <ol>
+                        <li>Одноуровневая система муниципальный округов: большинство муниципалитетов укрупняются до размера современного административного района, в каждом округе происходят выборы относительно небольшого числа муниципальных депутатов (20 на район), таким образом общее число </li>
+                        <li>Создание двухуровневой системы муниципальных округов: при сохранении или небольшом укрупнении существующих муниципальных округов, депутаты местных советов будут назначать не только главу администрации собственного муниципального образования (как сейчас), но и главу муниципального района. В любом случае в рамках реформы предполагается выделение муниципальных округов для городских анклавов (обособленных территорий, отделённых от общего массива городской застройки, имеющих сложившуюся структуру и собственную историю): так, чтобы на каждый отдельный посёлок в рамках петербургской агломерации приходился собственный муниципальный совет, избираемый только жителями этого посёлка.
+                        </li>
+                    </ol>
+                </li>
+                <li>После передачи функций районных администраций муниципальным администрациям отпадает протребность в администрациях районов, подчинённых Правительству Санкт-Петербурга. Таким образом, районные администрации будут полностью расформированы. По сути, в нынешней системе районные администрации являются пережитком советской системы и страдают от её недостатков: в частности, петербуржцы никак не могут участвовать в назначении глав районов, которые оказывают самое непосредственное влияние на их жизнь. Парадоксально, что при этом районные администрации имеют мало полномочий и не могут реально управлять хозяйствованием и развитием подчинённых им территорий.</li>
+                <li>Реструктуризация городских комитетов в рамках процессного подхода. Новая структура профильных вице-губернаторов и комитетов будет формироваться исходя из процессов, которыми управляют эти комитеты, что облегчит исполнение ими своих функций и позволит устранить административные барьеры для жителей и бизнеса. Это также приведёт к существенному сокращению расходов на бюрократический аппарат. Значительное число ныне наличествующих функций комитетов, подлежащих объединению, могут быть полностью устранены за их невостребованностью и бесполезностью (в частности, функции Комитета по промышленной политике, Комитета по развитию предпринимательства, Комитета по законности и правопорядку и т.д.). Кроме того, большая часть функций, ныне осуществляемых властью субъекта Российской Федерации, будет передана на уровень муниципальных администраций. В частности, речь идёт об уборке улиц, дорог и территорий (кроме магистралей, объединяющих несколько муниципальных районов), по уходу за зелёными насаждениями, по обслуживанию зданий, контролю за управляющими компаниями и т.д.
+                    <ul>
+                        <li>Строительно-хозяйственное направление должно объединить в себе функции Комитета по контролю за имуществом, Комитета по градостроительству и архитектуре, Комитета по развитию транспортной инфраструктуры, Комитета имущественных отношений, Жилищного комитета, Комитета по строительству, Комитета по благоустройству, Комитета по энергетике и инженерному обеспечению.
+                        </li>
+                        <li>Экономическое направление должно объединить в себе функции Комитета по тарифам, Комитета по промышленной политике и инновациям, Комитета по развитию предпринимательства и потребительского рынка, Комитета финансов, Комитета по экономической политике и стратегическому планированию, Комитета по государственному заказу. Дискуссионным остаётся вопрос принадлежности Комитета по инвестициям: отнести ли его к строительному или экономическому направлению.
+                        </li>
+                        <li>Культурное направление должно объединить в себе функции Комитета по культуре и Комитета по охране памятников, Комитета по межнациональным отношениям, Комитета по молодёжной политике, Комитета по печати, Комитета по туризму, Комитета по внешним связям.
+                        </li>
+                        <li>Комитет по образованию, науке и высшей школе объединит процессы двух ныне существующих одноимённых комитетов.
+                        </li>
+                        <li>Комитет по транспорту.
+                        </li>
+                        <li>Комитет по физической культуре и спорту.
+                        </li>
+                        <li>Направление по здравоохранению и социальному обеспечению объединяет должно объединить функции Комитета по здравоохранению, Комитета по социальной политике, Комитета по труду и занятости, Управления социального питания.
+                        </li>
+                        <li>
+                            Направление инспекций и контроля должно объединить в себе функции Комитета государственного финансового контроля, Комитета по контролю за имуществом, Государственной жилищной инспекции, Комитета по законности и правопорядку, Государственной технической инспекции, Государственно-административно-технической инспекции.
+
+                        </li>
+                        <li>Комитет по умному управлению городом берёт на себя функции Комитета по информатизации и связи, а также обеспечивает прозрачность деятельности каждой из структур городского руководства; все документы, изданные исполнительными органами государственной власти (за исключением относящихся к гостайне), все письма (с исключением из них персональных данных), все внутренние документы должны быть открытыми и индексироваться в поиске по базе городских документов; кроме того, Комитет по умному управлению городом занимается разработкой электронных систем контроля и управления городом, интеграцией пользовательских смартфонов в эту систему, в том числе с использованием нейронных сетей для обработки больших объёмов данных.
+                        </li>
+                        <li>Комитет по экологии возьмёт на себя функции Комитета по природопользованию и охране окружающей среды, Управления ветеринарии, а также функции Комитета по благоустройству в части обслуживания городских зелёных территорий и функции по планированию и развитию зелёных насаждений общего пользования.</li>
+                    </ul>
+                </li>
+            </ol>
+        </p>
+        <p>Управление по развитию садоводства и огородничества необходимо расформировать одновременно с устранением самих садоводств, огородничеств и дачных кооперативов на территории Санкт-Петербурга: отведённые под них земли должны быть либо переведены в ИЖС с возможностью приватизации и полноценного использования для проживания граждан, либо выкуплены для государственных нужд, если имеются иные планы их использования.
+        </p>
+        <p>Оставшиеся комитеты и управления: Комитет по делам Арктики, Комитет территориального развития, Комитет по делам записи актов гражданского состояния, Архивный комитет – расформировываются. Их функции, если таковые имелись, передаются в соответствующие профильные учреждения, либо администрациям муниципальных районов.
         </p>
     </section>
 
