--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
         <a href="#">О кандидате</a>
         <a href="../manifest/">Манифест</a>
         <a href="../program/">Программа</a>
-        <a href="../results/">Результаты</a>
+        <!-- <a href="../results/">Результаты</a> -->
         <!-- <a href="#join">Поддержать</a> -->
       </nav>
     </header>
