--- a/manifest/index.html
+++ b/manifest/index.html
@@ -36,7 +36,7 @@
         <a href="../about/">О кандидате</a>
         <a href="../manifest/">Манифест</a>
         <a href="#">Программа</a>
-        <a href="../results/">Результаты</a>
+        <!-- <a href="../results/">Результаты</a> -->
         <!-- <a href="#join">Поддержать</a> -->
       </nav>
     </header>
