Add link to program

--- a/manifest/index.html
+++ b/manifest/index.html
@@ -150,6 +150,7 @@
         ни с жителями, ни с бизнесменами. Поэтому сейчас я собираю свою команду,
         чтобы избираться в губернаторы Санкт-Петербурга и в корне это изменить.
       </p>
+      <a href="../program/">Подробнее</a>
     </section>
 
     <footer>
