--- a/program/index.html
+++ b/program/index.html
@@ -236,6 +236,85 @@
         </p>
         <p>Оставшиеся комитеты и управления: Комитет по делам Арктики, Комитет территориального развития, Комитет по делам записи актов гражданского состояния, Архивный комитет – расформировываются. Их функции, если таковые имелись, передаются в соответствующие профильные учреждения, либо администрациям муниципальных районов.
         </p>
+        <h4>Вторая стадия реформирования городского управления: системная</h4>
+        <p>Внедрение второй стадии предполагается только после тщательного аудита всех структур и функций городского управления. В результате возможен полный пересмотр подхода к системному реформированию власти Санкт-Петербурга.
+        </p>
+        <p>Однако на данном этапе мы предлагаем следующую структуру, основанную на функциональном подходе.
+        </p>
+        <p>Мы выделили три основные функции городской власти:
+            <ol>
+                <li>Планирование развития города: как в целом, на уровне понимания сущности каждой городской территории и их связей друг с другом, так и на микроуровне; планирование всех процессов управления городом в их синергичной связи друг с другом.</li>
+                <li>Поддержание городского хозяйства: уборка, содержание дорог и сетей, ремонт зданий, поддержание всех аспектов социальной инфраструктуры, строительство новых социальных объектов и новых кварталов в рамках утверждённого плана.
+                </li>
+                <li>Контроль над работой всех структур и ведомств Правительства Санкт-Петербурга.
+                </li>
+            </ol>
+
+        </p>
+        <p>Таким образом все структуры городской власти будут разделены в соответствии с этими тремя функциями.
+            <ol>
+                <li><strong>Координация и надзор.</strong>
+                    <ul>
+                        <li>Губернатор и аппарат губернатора – осуществляет представительские, надзорные функции и общее руководство.
+                        </li>
+                        <li>Комитет по законности противодействию коррупции – осуществляет контроль над деятельностью всех структур городской власти.
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Структуры, отвечающие за планирование.
+                    <ul>
+                        <li>Комитет обработки первичной информации – единая точка входа для всех, кто желает участвовать в развитии города: сюда свои предложения подают граждане, инвесторы, органы государственной власти, депутаты. Здесь информация обрабатывается и распределяется для дальнейшей работы; сотрудники этого комитета сопровождают инвестиционные и гражданские проекты на всём протяжении от их первичной оценки до реализации.
+                        </li>
+                        <li>Комитет городского планирования – отвечает за разработку генплана, проектов землепользования и застройки, проектов планировки территории. Здесь происходит формирование представления о назначении каждой отдельной территории, осмысление их связей друг с другом, проектирование транспортной инфраструктуры. Комитет осуществляет составление адресных программ в рамках своей компетенции.</li>
+                        <li>Комитет социального планирования – отвечает за планирование социальной политики, а также создание схем социального обеспечения граждан во всех сферах, составление адресных программ в рамках своей компетенции.
+                        </li>
+                        <li> Комитет планирования устойчивого развития – отвечает за планирование в области экологии, устойчивого развития, обращения с отходами, развития альтернативных источников энергии, содержания и развития территорий, занятых зелёными насаждениями, информатизации, цифровой интеграции, использования нейронных сетей для обработки большого объёма данных.</li>
+                        <li>Комитет бюджетного планирования – осуществляет планирование в области финансов.
+                        </li>
+                        <li>Комитет общественной оценки планирования – отвечает за согласование всех городских планов и проектов с жителями, исполнительными органами государственной власти, экспертным сообществом, бизнесом. Согласование всех новых городских проектов (в том числе с использованием информационно-телекоммуникационной сети «Интернет») проводится до момента принятия решения об их реализации или об отказе в реализации.</li>
+                    </ul>
+                    <p>Все планировочные Комитеты работают в тесной связке друг с другом и руководствуются Стратегиями 2030 и 2035, а также иными стратегическими документами, которые будут приняты с течением времени.
+                    </p>
+
+                </li>
+                <li><strong>Структуры, отвечающие за поддержание городского хозяйства и реализацию планов.</strong>
+                    <ul>
+                        <li>Комитет уборки и ухода – отвечает за содержание и ремонт дорог, дорожной инфраструктуры, городских территорий.</li>
+                        <li>Комитет по образованию – отвечает за текущую работу детских садов, школ, вузов, учреждений внеклассного образования в рамках планирования, осуществлённого Комитетом социального планирования.</li>
+                        <li>Комитет по спорту – отвечает за текущую работу объектов физической культуры и спорта, образовательных физкультурных объектов в рамках планирования, осуществлённого Комитетом социального планирования.</li>
+                        <li>Комитет по здравоохранению – отвечает за текущую работу медицинских учреждений в рамках планирования, осуществлённого Комитетом социального планирования, осуществляет регулирование цен на лекарственные препараты, включенные в перечень жизненно необходимых.
+                        </li>
+                        <li>Комитет по социальному обеспечению – отвечает за текущую работу учреждений социального обеспечения в рамках планирования, осуществлённого Комитетом социального планирования.
+                        </li>
+                        <li>Комитет по транспорту – отвечает за текущую работу и содержание городского транспорта в рамках планирования, осуществлённого Комитетом городского планирования, проводит государственную политику в сфере регулирования тарифов в транспортном комплексе.
+                        </li>
+                        <li>Комитет по инженерному обеспечению – отвечает за бесперебойную работу городских сетей в рамках планирования, осуществлённого Комитетом городского планирования, проводит государственную политику в сфере регулирования тарифов в электроэнергетике, теплоэнергетике, в сфере водоснабжения и водоотведения.
+                        </li>
+                        <li>Финансово-бюджетный комитет – отвечает за реализацию бюджетной политики.
+                        </li>
+                        <li>Комитет по управлению городским имуществом.
+                        </li>
+                        <li>Комитет по охране памятников истории и культуры.
+                        </li>
+                        <li> Комитет по взаимодействию с органами местного самоуправления - потребуется, так как функции управления в районах возьмут на себя муниципальные администрации.
+                        </li>
+                        <li>Комитет по экологии – отвечает за реализацию планов Комитета планирования устойчивого развития в области экологической политики, содержание зелёных насаждений общего пользования.</li>
+                        <li> Комитет по строительному контролю – отвечает за выдачу разрешений на строительство, за контроль над всеми фазами и элементами подготовительных и строительных работ.
+                        </li>
+                        <li>Комитет по культуре – отвечает за работу городских объектов культуры, досуговых центров, принадлежащих городу СМИ.
+                        </li>
+                        <li>Комитет по информатизации и обеспечению прозрачности – обеспечивает реализацию планов Комитета планирования устойчивого развития, а также прозрачность деятельности каждой из структур городского руководства; все документы, изданные исполнительными органами государственной власти (за исключением относящихся к государственной тайне), все письма (с исключением из них персональных данных), все внутренние документы должны быть открытыми и должны индексироваться в поиске по базе городских документов.
+                        </li>
+                        <li>Комитет по внешним взаимодействиям – отвечает за связь с гражданами, разбор их жалоб и предложений (кроме тех, что касаются планирования и поступают в Комитет обработки первичной информации), а также выполнение представительских функций и взаимодействие Санкт-Петербурга с другими странами и регионами, федеральными органами власти (за исключением тех, что исполняют профильные исполнительные органы государственной власти в рамках своей компетенции).
+                        </li>
+                    </ul>
+                </li>
+            </ol>
+            <p>Наша ключевая мысль заключается в том, что для воплощения в жизнь идеального видения будущего необходимо кардинальное изменение системы городского управления. Только так мы сможем решить главную проблему: наличие бюрократических препон на каждом уровне, непрозрачность самой власти и схемы принятия ею решений. Без реформы управления невозможно никакое дальнейшее развитие города.</p>
+        </p>
+        <h3>Раздел 4. Предложения по изменениям нормативных документов исполнительных органов государственной власти
+                    </h3>
     </section>
 
     <footer>
